--- a/src/app/webcam/webcam.component.html
+++ b/src/app/webcam/webcam.component.html
@@ -1,1 +1,10 @@
-<p>webcam works!</p>
+<div class="video-container">
+  <video #video
+         [width]="WIDTH"
+         [height]="HEIGHT"
+         autoplay
+         muted>
+  </video>
+  <div #canvas></div>
+  <div id="canvasContainer"></div>
+</div>
